# BigNum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_1.cpp  main.cpp
include/: big_num.hpp
include/big_num/: add_sub.hpp  allocator.hpp  basic.hpp  basic_integer.hpp  bitwise.hpp  block_info.hpp  converter.hpp  division.hpp  dyn_array.hpp  format.hpp  mul.hpp  ntt.hpp  operators.hpp  type_traits.hpp  utils.hpp
include/big_num/internal/: add_sub.hpp  base.hpp  cmp.hpp  integer.hpp  integer_parse.hpp  logical_bitwise.hpp  number_span.hpp  ops.hpp  utils.hpp
include/big_num/internal/div/: exact.hpp  modulus.hpp  naive.hpp
include/big_num/internal/mul/: karatsuba.hpp  mul.hpp  naive.hpp  ntt.hpp  ntt_params.hpp  toom_cook.hpp
include/big_num/old/: allocator.hpp  basic.hpp  basic_integer.hpp  block_info.hpp  division.hpp  dyn_array.hpp  error.hpp  format.hpp  operators.hpp  schonhage_strassen.hpp  utils.hpp
test/: CMakeLists.txt
test/fuzzer/: CMakeLists.txt  driver.cpp  fuzzer.py
test/runtime/: CMakeLists.txt  allocator_test.cpp  basic_integer_test.cpp  bitwise_mock.hpp  division_test.cpp  dyn_array_test.cpp  integer_bitwise_test.cpp  mock.hpp
tools/: basic.py  bitwise_test_case_gen.py  requirements.txt  root_gen.py  test.py  test2.txt  test_karatsuba.py  test_ntt.py  test_toom_cook.py
